@@ -49,35 +49,25 @@ public class PluginConfigController {
 	}
 
 	@SuppressWarnings("unchecked")
-	public <T extends PluginConfig> void setOrCreatePluginConfig(ConfigExtension<T> plugin) {
+	public <T extends PluginConfig> void setOrCreatePluginConfig(ConfigExtension<T> plugin) throws PluginException {
 		Class<T> pluginConfigClass = null;
-		T pluginConfig = null;
+		T pluginConfig;
 
 		try {
-			pluginConfigClass = (Class<T>)plugin.getClass().getMethod("getConfig", new Class<?>[]{}).getReturnType();
+			pluginConfigClass = (Class<T>)plugin.getClass().getMethod("getConfig").getReturnType();
 			pluginConfig = getPluginConfig(pluginConfigClass);
 			
 			if (pluginConfig == null) {
-				pluginConfig = pluginConfigClass.newInstance();
+				pluginConfig = pluginConfigClass.getDeclaredConstructor().newInstance();
 				updatePluginConfig(pluginConfig);
 			}
 			
 			// propagate new config to plugin
 			plugin.configLoaded(pluginConfig);
 			
-		} catch (NoSuchMethodException e) {
-			log.error("Failed to instantiate config for plugin '" + plugin.getClass().getCanonicalName() + "'.");
-			log.error("Please check the following error message: " + e.getMessage());
-		} catch (InstantiationException e) {
-			log.error("Failed to instantiate class '" + pluginConfigClass.getCanonicalName() + "'.");
-			log.error("Please provide a no-arg constructor.");
-		} catch (IllegalAccessException e) {
-			log.error("Failed to access no-arg constructor of class '" + pluginConfigClass.getCanonicalName() + "'.");
-			log.error("Please check the following error message: " + e.getMessage());
-		} catch (SecurityException e) {
-			log.error("Failed to instantiate config for plugin '" + plugin.getClass().getCanonicalName() + "'.");
-			log.error("Please check the following error message: " + e.getMessage());
-		}			
+		} catch (Exception e) {
+			throw new PluginException("Failed to load config for plugin " + plugin.getClass().getName(), e);
+		}
 	}
 
 	@SuppressWarnings("unchecked")
